# captcha-recognition

./: .gitignore  README.md  pyproject.toml  requirements.txt
captcha_recognision/: app.py  captcha_solver.py  captcha_solver_cnn.py  captcha_solver_knn.py  config.py
captcha_recognision/data_manager/: dataset_manager.py
captcha_recognision/model/: captcha_model.py
captcha_recognision/preprocessing/: image_preprocessor.py
captcha_recognision/segmentation/: character_segmenter.py
captcha_recognision/utils/: logger.py
